--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,24 +13,24 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.3.1
-  firebase_auth: ^3.3.14
-  flutter_auth_ui: ^2.2.0
-  firebase_core: 1.10.0
-  flutter_riverpod: ^0.14.0+3
+  google_fonts: ^4.0.3
+  firebase_auth: ^4.2.2
+  flutter_auth_ui: ^3.1.0
+  firebase_core: ^2.8.0
+  flutter_riverpod: ^2.3.2
   page_transition: ^2.0.5
   rflutter_alert: ^2.0.2
-  cloud_firestore: ^2.1.0
+  cloud_firestore: ^4.4.5
   carousel_slider: ^4.0.0-nullsafety.0
-  im_stepper: ^0.1.3
+  im_stepper: ^1.0.1+1
   flutter_rating_bar: ^4.0.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   flutter_datetime_picker: ^1.5.1
   add_2_calendar: ^2.1.0
   ntp: ^2.0.0
   chips_choice_null_safety: ^2.0.1
-  flutter_local_notifications: any
-  firebase_messaging: ^11.4.1
+  flutter_local_notifications: 13.0.0
+  firebase_messaging: ^14.3.0
   dio: any
 
 
@@ -38,7 +38,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
 
